# Automated-Meeting-Notes-System

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  errors.py  main.py  models.py  rate_limit.py
app/routers/: frontend.py  health.py  notifications.py  summary.py  transcription.py  upload.py
app/services/: audio.py  notifications.py  summarization.py  transcription.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
tests/: conftest.py  test_frontend.py  test_health.py  test_notifications.py  test_summary.py  test_transcription.py  test_upload.py
